# esfera-3d-raycasting

./: CMakeLists.txt  README.md
include/: Cilinder.hpp  HitRecord.hpp  Object.hpp  Plain.hpp  Point.hpp  Point3.hpp  Sphere.hpp  Vector.hpp  Vector3.hpp
src/: Cilinder.cpp  Object.cpp  Plain.cpp  Point3.cpp  Sphere.cpp  Vector3.cpp  a.out  image.ppm  main.cpp
